[gd_scene load_steps=8 format=3 uid="uid://duoau4hurufch"]

[ext_resource type="Script" path="res://card/card.gd" id="1_hwh7a"]
[ext_resource type="Shader" path="res://card/card_shader.gdshader" id="2_ojait"]
[ext_resource type="ArrayMesh" uid="uid://dglbum3pcjhfk" path="res://card/card_mesh.res" id="3_rqhai"]

[sub_resource type="ViewportTexture" id="ViewportTexture_3ubbt"]
viewport_path = NodePath("FrontMesh/FrontViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1tqxt"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_ojait")
shader_parameter/card_texture = SubResource("ViewportTexture_3ubbt")

[sub_resource type="ViewportTexture" id="ViewportTexture_axqd0"]
viewport_path = NodePath("BackMesh/BackViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r1kyf"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_ojait")
shader_parameter/card_texture = SubResource("ViewportTexture_axqd0")

[node name="Card" type="Node3D"]
script = ExtResource("1_hwh7a")

[node name="FrontMesh" type="MeshInstance3D" parent="."]
material_override = SubResource("ShaderMaterial_1tqxt")
mesh = ExtResource("3_rqhai")

[node name="FrontViewport" type="SubViewport" parent="FrontMesh"]
disable_3d = true
transparent_bg = true
size = Vector2i(300, 400)
render_target_update_mode = 4

[node name="FrontBkgd" type="ColorRect" parent="FrontMesh/FrontViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="FrontLabel" type="Label" parent="FrontMesh/FrontViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "front"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 4

[node name="BackMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -2.62269e-07, 0, 1, 0, 2.62269e-07, 0, -1, 0, 0, 0)
material_override = SubResource("ShaderMaterial_r1kyf")
mesh = ExtResource("3_rqhai")

[node name="BackViewport" type="SubViewport" parent="BackMesh"]
disable_3d = true
transparent_bg = true
size = Vector2i(300, 400)
render_target_update_mode = 4

[node name="BackBkgd" type="ColorRect" parent="BackMesh/BackViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackLabel" type="Label" parent="BackMesh/BackViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "back"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 4
